--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Notes-app</title>
+    <title>Notes App</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -15,7 +15,7 @@
   <body>
     <button class="add" id="add">
       <i class="fas fa-plus"></i>
-      Add Note
+      Add note
     </button>
   </body>
 </html>
